# cameron

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
data/: db.yml
figures/: method.dot
h/: db.hpp  glob_img.hpp
src/: db.cpp  glob_img.cpp
src/db/: db.cpp  read_write.cpp  svm.cpp
